@@ -10,6 +10,8 @@ VERSION 3.0.2
   BUGFIXES:
    * Fix saving and restoring playlist queue on quit / restart (BR 338741)
    * Fix system tray icon reordering
+   * Fix erroneous apparent zero track progresses on track changes, which caused
+     playcount updates and scrobbles to get skipped (BR 337849, 406701)
 
 
 VERSION 3.0.1
